fix upload-files
